--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Project folder, basically these course concepts are covered through project, so project are upload in github with alias ''. Check Out.
+# Project folder, basically these course concepts are covered through project, so project are upload in github with alias 'twtsfmu'. Check Out.
 
 Project
 temp
